# pytickrs

./: .gitignore  LICENSE  README.md  details-template-vars.txt  details-template.md  min-max.py  mise.toml  pyproject.toml  tickers.txt
pytickrs/: __init__.py  __main__.py  log.py  logging.py  once.py  split_pane.py  tickers.py  tui.py
tests/: cli_test.py  process_session.py
